<resources>
    <string name="app_name">Golden Inkwell</string>
    <string name="muslim_scientists">Ilmuwan Muslim</string>
    <string name="scientist_name">Nama Ilmuwan</string>
    <string name="description">Deskripsi</string>
    <string name="about_us">Tentang Author</string>
    <string name="avatar">Avatar</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="email_address">Alamat Surel</string>
    <string name="bio">Bio</string>
    <string name="favorite">Favorit</string>
    <string name="share">Bagikan</string>
    <string name="author_name">Suluh Sulistiawan</string>
    <string name="author_email">suluh.webdevelopers@hotmail.com</string>
    <string name="author_bio">Perjuangan milik kita, kemenangan milik Allah!\nFree Palestine! 🇵🇸</string>
    <string name="github">GitHub</string>
    <string name="website">Website</string>
    <string name="gitlab">GitLab</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">X (formerly Twitter)</string>
    <string-array name="data_name">
        <item>Al-Khawarizmi</item>
        <item>Ibnu Sina</item>
        <item>Ibn Khaldun</item>
        <item>Ibnu al-Haitsam</item>
        <item>Ibn Firnas</item>
        <item>Al-Biruni</item>
        <item>Al-Farabi</item>
        <item>Al-Farghani</item>
        <item>Jabir bin Hayyan</item>
        <item>Al-Kindi</item>
        <item>Ar-Razi</item>
        <item>Abul Wafa</item>
        <item>Omar Khayyam</item>
        <item>Abu Kamil</item>
        <item>Ibn Sahl</item>
        <item>Ibn Bassal</item>
        <item>Ibn al-Nafis</item>
        <item>Al-Zahrawi</item>
        <item>Al-Idrisi</item>
        <item>Banu Musa Bersaudara</item>
        <item>Ibn Rushd</item>
        <item>Thabit ibn Qurra</item>
        <item>Fatima al-Fihri</item>
    </string-array>
    <string-array name="data_full_name">
        <item>Muhammad bin Musa al-Khawarizmi</item>
        <item>Abu Ali Al Hussain Ibnu Abdullah Ibnu Sina</item>
        <item>Abu Zaid \'Abdurrahman bin Muhammad bin Khaldun al-Hadhrami</item>
        <item>Abu Ali al-Hasan bin al-Hasan bin al-Haitsam atau Ibnu al-Haitsam</item>
        <item>Abbas Abu al-Qasim bin Firnas ibn Wirdas al-Takurini</item>
        <item>Abu Raihan Muhammad bin Ahmad Al-Biruni</item>
        <item>Abu Nashr Muhammad bin Muhammad bin Tarkhan bin Uzalah Al-Farabi</item>
        <item>Abu al-\'Abbas Ahmad ibn Muhammad ibn Kathir al-Farghani</item>
        <item>Abu Musa Jabir bin Hayyan</item>
        <item>Abu Yusuf Ya\'qub bin Ishaq Al-Kindi</item>
        <item>Abu Bakar Muhammad bin Zakaria ar-Razi</item>
        <item>Abul Wafa Muhammad Ibn Muhammad Ibn Yahya Ibn Ismail Buzjani</item>
        <item>Abu al-Fath Ghiyat al-Din Umar ibn Ibrahim al-Khayyam al-Nishapuri</item>
        <item>Abu Kamil Shuja\' ibn Aslam</item>
        <item>Abu Saad al-Ala Ibnu Sahal</item>
        <item>Muhammad Ibrahim Ibnu Bassal</item>
        <item>Ala-al-Din abu al-Hasan Ali bin Abi-Hazm al-Qarshi al-Dimashqi</item>
        <item>Abul Qasim Khalaf ibn al-Abbas az-Zahrawi</item>
        <item>Abu Abdullah Muhammad al-Idrisi al-Qurtubi al-Hasani al-Sabti</item>
        <item>Jafar Muhammad bin Musa bin Shakir Banu Musa</item>
        <item>Abu Al-Walid Muhammad ibn Ahmad ibn Rusyd</item>
        <item>Abu\'l Hasan Tsabit bin Qurra\' bin Marwan al-Sabi al-Harrani</item>
        <item>Fatimah binti Muhammad al-Fihriya al-Qurashiyah</item>
    </string-array>
</resources>